number of inhabitants in Montevideo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <main>
         <h1>Luan Rodriguez | WWD 130</h1>
         <img src="images/profile.jpg" alt="Luan Rodriguez" width="200">
-        <p>Hi, I'm Luan. I'm 22 years old and I come from Uruguay. I'm a programming student at BYU-Idaho. I have a family of 4: my mother Lourdes, my father Kevin and my sister Ayelen.
-            I have been living in Montevideo, Uruguay for about 6 months. It is the capital of Uruguay and is a city that is over 200 years old.
-            I am encouraged to continue learning more about web development and its advantages in the working world.</p>
+        <p>Hi, I'm Luan. I'm 22 years old and I come from Uruguay. I'm a programming student at BYU-Idaho. I have a family of 4: my mother Lourdes, my father Kevin and my sister Ayelén. 
+            I have been living in Montevideo, Uruguay for about 6 months. It is the capital of Uruguay and is a city that is over 200 years old with an estimated 1.384 million people. 
+            I am excited to continue learning more about web development and its advantages in the working world.</p>
     </main>
     <footer>
         <p>&copy;2025 | Luan Rodriguez | Montevideo, Uruguay</p>
