--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -35,7 +35,7 @@
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/800x450/accra-ghana-temple-detail-249022-2400x1200.jpg" alt="Church of Jesus Christ Temple" width="200">
     </aside>
     <footer>
-        Luan Rodriguez
+        | Luan Rodriguez |
     </footer>
 </body>
 </html>
