holy grail added 3

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -14,10 +14,10 @@
     <nav>
         <ul>
             <li>
-                <a href=""></a>
+                <a href="https://www.linkedin.com/in/luan-rodr%C3%ADguez-3a075930a/" target="_blank">LinkedIn</a>
             </li>
             <li>
-                <a href=""></a>
+                <a href="https://www.byupathway.edu/" target="_blank">BYU-Pathway Worldwide</a>
             </li>
         </ul>
     </nav>
