--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description" content="This is my web page where I post my information, academic progress and anecdotes while learning to program. Enjoy it!">
+    <meta name="author" content="Luan Rodriguez">
     <title>Luan Rodriguez | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -17,9 +19,13 @@
         <h1>Luan Rodriguez | WWD 130</h1>
         <img src="images/profile.jpg" alt="Luan Rodriguez" width="200">
         <p>Hi, I'm Luan. I'm 22 years old and I come from Uruguay. I'm a programming student at BYU-Idaho. I have a family of 4: my mother Lourdes, my father Kevin and my sister Ayelén. 
-            I have been living in Montevideo, Uruguay for about 6 months. It is the capital of Uruguay and is a city that is over 200 years old with an estimated 1.384 million people. 
             I am excited to continue learning more about web development and its advantages in the working world.</p>
     </main>
+    <aside>
+        <h2>Montevideo, Uruguay</h2>
+        <img src="images/montevideo.jpg" alt="Montevideo">
+        <p>Montevideo is the capital of Uruguay. I was born here but moved here at a very young age. Six months ago I returned here and I can say that this city has a rich history and culture, which is reflected in its architecture, which combines modern buildings with historic structures. It is also reflected in its cuisine and traditions, and it is a city that is over 200 years old and is estimated to have approximately 1.384 million inhabitants.</p>
+    </aside>
     <footer>
         <p>&copy;2025 | Luan Rodriguez | Montevideo, Uruguay</p>
     </footer>
