--- a/index.html
+++ b/index.html
@@ -5,37 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my web page where I post my information, academic progress and anecdotes while learning to program. Enjoy it!">
     <meta name="author" content="Luan Rodriguez">
-    <title>Luan Rodriguez | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap" rel="stylesheet">
+    <title>Luan Rodriguez | WDD 130</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="https://www.linkedin.com/in/luan-rodr%C3%ADguez-3a075930a/">LinkedIn</a>
-            <a href="https://www.facebook.com/">Facebook</a>
+            <a href="https://www.linkedin.com/in/luan-rodr%C3%ADguez-3a075930a/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
         </nav>
     </header>
-    
-    <main>
-        <h1>Luan Rodriguez | WWD 130</h1>
-        <img src="images/profile.jpg" alt="Luan Rodriguez" width="200">
-        <p>Hi, I'm Luan Rodriguez. I'm 22 years old and I come from Uruguay. I am a programming student at BYU-Idaho. I have a family of 4: my father Kevin, my mother Lourdes and my sister Ayelén. We are members of the Church of Jesus Christ of Latter-day Saints. In fact, my father has the call of Stake President, Tacuarembo Stake, Uruguay.
-            <br>I served a full time mission in Curitiba, Brazil. It was an incredible 25 months of service where I learned about the Brazilian culture, met amazing people, but most of all served God and grew as a child of Him.
-            <br>Since I was a child I have loved programming. I have studied about it in several courses throughout my years. I am excited to continue learning more about web development, which is new to me, and its advantages in the working world.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple?lang=spa" target="_blank">Montevideo Uruguay Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=spa" target="_blank">Curitiba Brasil Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-utah-rock-canyon-temple?lang=spa" target="_blank">Provo Utah Temple</a></li>
-        </ul>
-    </main>
 
-    <aside class="box">
-        <h2>Montevideo, Uruguay</h2>
-        <img src="images/montevideo.jpg" alt="Montevideo">
-        <p>Montevideo is the capital of Uruguay. I was born here but moved here at a very young age. Six months ago I returned here and I can say that this city has a rich history and culture, which is reflected in its architecture, which combines modern buildings with historic structures. It is also reflected in its cuisine and traditions, and it is a city that is over 200 years old and is estimated to have approximately 1.384 million inhabitants.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Luan Rodriguez | WWD 130</h1>
+            <img src="images/profile.jpg" alt="Luan Rodriguez" width="200">
+            <p>Hi, I'm Luan Rodriguez. I'm 22 years old and I come from Uruguay. I am a programming student at BYU-Idaho. I have a family of 4: my father Kevin, my mother Lourdes and my sister Ayelén. We are members of the Church of Jesus Christ of Latter-day Saints. In fact, my father has the call of Stake President, Tacuarembo Stake, Uruguay.
+                <br>I served a full time mission in Curitiba, Brazil. It was an incredible 25 months of service where I learned about the Brazilian culture, met amazing people, but most of all served God and grew as a child of Him.
+                <br>Since I was a child I have loved programming. I have studied about it in several courses throughout my years. I am excited to continue learning more about web development, which is new to me, and its advantages in the working world.</p>
+            <ul class="box">
+                <li class="temples"><a href="https://www.churchofjesuschrist.org/temples/details/montevideo-uruguay-temple?lang=spa" target="_blank">Montevideo Uruguay Temple</a></li>
+                <li class="temples"><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=spa" target="_blank">Curitiba Brasil Temple</a></li>
+                <li class="temples"><a href="https://www.churchofjesuschrist.org/temples/details/provo-utah-rock-canyon-temple?lang=spa" target="_blank">Provo Utah Temple</a></li>
+            </ul>
+        </main>
+    
+        <aside class="box">
+            <h2>Montevideo, Uruguay</h2>
+            <img src="images/montevideo.jpg" alt="Montevideo">
+            <p>Montevideo is the capital of Uruguay. I was born here but moved at a very young age. Six months ago I returned here and I can say that this city has a rich history and culture, which is reflected in its architecture, which combines modern buildings with historic structures. It is also reflected in its cuisine and traditions, and it is a city that is over 200 years old and is estimated to have approximately 1.384 million inhabitants.</p>
+        </aside>
+    </div>
 
     <footer>
         <p>&copy;2025 | Luan Rodriguez | Montevideo, Uruguay</p>
